After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 708299 - aborts if unable to find AppStream data
aborts if unable to find AppStream data
Status: RESOLVED FIXED
Product: gnome-software
Classification: Applications
Component: General
unspecified
Other Linux
: Normal normal
: ---
Assigned To: GNOME Software maintainer(s)
GNOME Software maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2013-09-18 14:33 UTC by William Jon McCann
Modified: 2013-09-18 22:38 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description William Jon McCann 2013-09-18 14:33:54 UTC
When I run Software in jhbuild it aborts with the following messages printed to the console:
(gnome-software:15780): GsPlugin-WARNING **: No AppStream data, try 'make install-sample-data' in data/
**
GsPlugin:ERROR:gs-plugin-appstream.c:193:gs_plugin_startup: code should not be reached

Program received signal SIGABRT, Aborted.