Deal gracefully with missing AppData

Don't abort in the appdata plugin if data is missing.
In the UI, we hide empty sections of the overview, and if
the entire overview is empty, we show a placeholder.

https://bugzilla.gnome.org/show_bug.cgi?id=708299